--- a/main.css
+++ b/main.css
@@ -14,6 +14,6 @@
     body {
       background: linear-gradient(135deg, #fe2929, #ffb3c5);
       background-color: #184e8e;
-      padding: 40px 20px 500px 20px;
+      padding: 40px 20px;
       font-family: 'Do Hyeon'
     }
