--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
     }
     body {
       background: linear-gradient(135deg, #36D1DC, #5B86E5);
-      background-color: #184e8e;
+      background-color: #5B86E5;
       padding: 40px 20px;
       font-family: 'Do Hyeon'
     }
